<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".DetailsActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:src="@drawable/header_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:adjustViewBounds="true"
                android:contentDescription="@string/header_image_description"/>
        <ImageView
                android:src="@drawable/film_poster"
                android:adjustViewBounds="true"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:id="@+id/imageView2" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/film_poster_description"/>
        <TextView
                android:text="@string/avengers_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_film_title" android:textSize="18sp"
                android:textColor="@color/colorAccent" android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageView2" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/imageView2"/>
        <TextView
                android:text="@string/released"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_film_title"
                android:layout_marginTop="8dp" android:textColor="@android:color/black" android:textStyle="bold"
                android:id="@+id/textView5"/>
        <TextView
                android:text="@string/avengers_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4" app:layout_constraintStart_toEndOf="@+id/textView5"
                android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
                android:textColor="@android:color/black"/>
        <Button
                android:text="@string/movie_trailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_movie_trailer" app:layout_constraintStart_toEndOf="@+id/imageView2"
                android:layout_marginStart="16dp" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/textView5"/>
        <TextView
                android:text="@string/overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6" android:textStyle="bold"
                android:textColor="@android:color/black" android:textSize="18sp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:text="@string/avengers_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:textColor="@android:color/tertiary_text_light"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:paddingStart="@dimen/text_padding" android:paddingEnd="@dimen/text_padding"
                android:textSize="14sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
