<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CounterFragment">

    <Button
            android:id="@+id/fragment_counter_create_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_button_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/fragment_counter_start_btn"
            app:layout_constraintEnd_toStartOf="@+id/fragment_counter_start_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    <Button
            android:id="@+id/fragment_counter_start_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/start_button_text"
            app:layout_constraintEnd_toStartOf="@+id/fragment_counter_cancel_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fragment_counter_create_btn"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/fragment_counter_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/fragment_counter_start_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fragment_counter_start_btn" />

    <TextView
            android:id="@+id/fragment_counter_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_counter_start_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>